@@ -47,7 +47,7 @@ module SimpleNavigation
 
     def set_template_from(context)
       SimpleNavigation.controller = extract_controller_from context
-      SimpleNavigation.template = SimpleNavigation.controller.instance_variable_get(:@template)
+      SimpleNavigation.template = SimpleNavigation.controller.instance_variable_get(:@template) || (SimpleNavigation.controller.respond_to?(:view_context) ? SimpleNavigation.controller.view_context : nil)
     end
 
     # Returns the context in which the config file should be evaluated.
